force-app/main/default/objects/Contact/fields/Active_Stage_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Active_Stage_Time_Stamp__c</fullName>
    <description>As soon as the contact enters the Active stage, a time stamp is set by a workflow</description>
    <label>Active Stage Time Stamp</label>
    <type>DateTime</type>
</CustomField>