force-app/main/default/objects/Contact/fields/Address1_UK__c.field-meta.xml
<CustomField>
    <fullName>Address1_UK__c</fullName>
    <label>Address1(UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>