force-app/main/default/objects/Contact/fields/Address3_UK__c.field-meta.xml
<CustomField>
    <fullName>Address3_UK__c</fullName>
    <label>Address3(UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>