force-app/main/default/objects/Contact/fields/Address4_UK__c.field-meta.xml
<CustomField>
    <fullName>Address4_UK__c</fullName>
    <label>Address4(UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>