force-app/main/default/objects/Contact/fields/Address_2_UK__c.field-meta.xml
<CustomField>
    <fullName>Address_2_UK__c</fullName>
    <label>Address2(UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>