force-app/main/default/objects/Contact/fields/Agency_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contract_Term__c</fullName>
    <label>Agency Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>