force-app/main/default/objects/Contact/fields/Agency_Inquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>Agency_Inquiry_Count__c</fullName>
    <label>Agency Inquiry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>