force-app/main/default/objects/Contact/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>If Company record type is 3rd party agency then show name with hyperlink.</description>
    <formula>IF(Account.RecordType.Name = &quot;SystemInternal&quot; , &apos;Individual&apos;  , 
  HYPERLINK(&quot;/&quot;&amp;Account.Id, Account.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>