force-app/main/default/objects/Contact/fields/Agency_Registration_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Agency_Registration_Expiry__c</fullName>
    <label>Agency Registration Expiry</label>
    <type>Date</type>
</CustomField>