force-app/main/default/objects/Contact/fields/Agency_Trade_License_No__c.field-meta.xml
<CustomField>
    <fullName>Agency_Trade_License_No__c</fullName>
    <label>Agency Trade License No.</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>