force-app/main/default/objects/Contact/fields/Agent_Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Contact__c</fullName>
    <label>Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>