force-app/main/default/objects/Contact/fields/Alternative_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact_Details__c</fullName>
    <inlineHelpText>Please use this field if contact has additional contact details such as secondary email, additional phone numbers, fax, etc.</inlineHelpText>
    <label>Alternative Contact Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>