force-app/main/default/objects/Contact/fields/Amend_Date_UK__c.field-meta.xml
<CustomField>
    <fullName>Amend_Date_UK__c</fullName>
    <label>Amend Date (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>