force-app/main/default/objects/Contact/fields/AOS__c.field-meta.xml
<CustomField>
    <fullName>AOS__c</fullName>
    <label>AOS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>