force-app/main/default/objects/Contact/fields/Automated_Email_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Automated_Email_Opt_Out_Date__c</fullName>
    <label>Automated Email Opt Out Date</label>
    <type>DateTime</type>
</CustomField>