force-app/main/default/objects/Contact/fields/B2B_Client_Inquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>B2B_Client_Inquiry_Count__c</fullName>
    <label>B2B Client Inquiry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>