force-app/main/default/objects/Contact/fields/Baccarat_Residences_Brokerage_Registrati__c.field-meta.xml
<CustomField>
    <fullName>Baccarat_Residences_Brokerage_Registrati__c</fullName>
    <label>Baccarat Residences Brokerage Registrati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement Sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by the Agency</fullName>
            </value>
            <value>
                <fullName>Registration in Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>