force-app/main/default/objects/Contact/fields/Bank_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Bank_Postcode__c</fullName>
    <label>Bank Postcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>