force-app/main/default/objects/Contact/fields/Bathrooms_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_Contact__c</fullName>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>