force-app/main/default/objects/Contact/fields/Bedrooms_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_Contact__c</fullName>
    <label>Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>