force-app/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>IF( ISBLANK(Birthdate), NULL, LPAD(TEXT( MONTH( Birthdate )), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT( DAY( Birthdate )), 2, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>