force-app/main/default/objects/Contact/fields/BRN__c.field-meta.xml
<CustomField>
    <fullName>BRN__c</fullName>
    <label>BRN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>