force-app/main/default/objects/Contact/fields/Brokerage_Registration__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Registration__c</fullName>
    <label>Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Broker Agreement Sent</fullName>
                <label>Draft Brokerage Agreement Sent to Agency</label>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
                <label>On hold Missing Documents</label>
            </value>
            <value>
                <fullName>Brokerage Agreement Sent to ICD</fullName>
                <label>Pending with ICD for Signatures</label>
            </value>
            <value>
                <fullName>Document not given by the Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>