force-app/main/default/objects/Contact/fields/Buyer_Inquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Inquiry_Count__c</fullName>
    <label>Buyer Inquiry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>