force-app/main/default/objects/Contact/fields/Canal_Front_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Canal_Front_Brokerage__c</fullName>
    <label>Canal Front Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending with LSIR for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>