force-app/main/default/objects/Contact/fields/channel_source__c.field-meta.xml
<CustomField>
    <fullName>channel_source__c</fullName>
    <label>Channel Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Property Portal</fullName>
                <default>true</default>
                <label>Property Portal</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>meta</fullName>
            </value>
            <value>
                <fullName>linkedin</fullName>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>twitter</fullName>
            </value>
            <value>
                <fullName>youtube</fullName>
            </value>
            <value>
                <fullName>snapchat</fullName>
            </value>
            <value>
                <fullName>tiktok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>