force-app/main/default/objects/Contact/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF</label>
    <referenceTo>CIF__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>