force-app/main/default/objects/Contact/fields/Closing_B2B_Client_Count__c.field-meta.xml
<CustomField>
    <fullName>Closing_B2B_Client_Count__c</fullName>
    <label>Closing B2B Client Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>