force-app/main/default/objects/Contact/fields/Closing_Exclusive_Count__c.field-meta.xml
<CustomField>
    <fullName>Closing_Exclusive_Count__c</fullName>
    <label>Closing Exclusive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>