force-app/main/default/objects/Contact/fields/Community_Contact__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact__c</fullName>
    <label>Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>