force-app/main/default/objects/Contact/fields/Contact_15_digit__c.field-meta.xml
<CustomField>
    <fullName>Contact_15_digit__c</fullName>
    <formula>CASESAFEID(LEFT(Id, 15) + MID(Id, 16, 1) + RIGHT(Id, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 15 digit</label>
    <type>Text</type>
</CustomField>