force-app/main/default/objects/Contact/fields/Contact_Activity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_Activity_Comments__c</fullName>
    <label>Activity Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>