force-app/main/default/objects/Contact/fields/Contact_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_Date__c</fullName>
    <label>Contact: Created Date</label>
    <type>DateTime</type>
</CustomField>