force-app/main/default/objects/Contact/fields/Contact_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 18 Digit Id</label>
    <type>Text</type>
</CustomField>