force-app/main/default/objects/Contact/fields/Contact_Journey__c.field-meta.xml
<CustomField>
    <fullName>Contact_Journey__c</fullName>
    <label>Contact Journey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>