force-app/main/default/objects/Contact/fields/Contact_LInk__c.field-meta.xml
<CustomField>
    <fullName>Contact_LInk__c</fullName>
    <formula>HYPERLINK(&quot;https://lightning.nativeforms.app/m0/z48xmP@SY5cJ?contact=&quot;&amp;Id,&quot;https://https://lightning.nativeforms.app/m0/z48xmP@SY5cJ?contact=&quot;&amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LInk</label>
    <type>Text</type>
</CustomField>