force-app/main/default/objects/Contact/fields/Contact_Listing_Sale_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Listing_Sale_Count__c</fullName>
    <label>Listing Sale Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>