force-app/main/default/objects/Contact/fields/Contact_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sub_Type__c</fullName>
    <label>Contact Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>