force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Just Looking</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Short-term Renter</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Buyer&apos;s Agent</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Escrow Officer</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Investment Broker</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Loan Processor</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Past Client</fullName>
            </value>
            <value>
                <fullName>Property Inspector</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Seller&apos;s Agent</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>