force-app/main/default/objects/Contact/fields/Contact_Type_Updated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Type Updated</label>
    <type>Checkbox</type>
</CustomField>