force-app/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agency</fullName>
                <label>3rd Party Agency</label>
            </value>
            <value>
                <fullName>Agency Client</fullName>
                <label>3rd Party Agency Client</label>
            </value>
            <value>
                <fullName>Agent</fullName>
                <label>3rd Party Agent</label>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Referred Contact</fullName>
            </value>
            <value>
                <fullName>Search Agent</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>