force-app/main/default/objects/Contact/fields/Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Management</label>
    <referenceTo>Contract_Management__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>