force-app/main/default/objects/Contact/fields/Conversion_Active_to_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Active_to_Nurture__c</fullName>
    <formula>IF(ISBLANK(Nurture_Stage_Time_Stamp__c) = FALSE,
TEXT( 
FLOOR(Nurture_Stage_Time_Stamp__c - Active_Stage_Time_Stamp__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((Nurture_Stage_Time_Stamp__c - Active_Stage_Time_Stamp__c)*24,24)) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((Nurture_Stage_Time_Stamp__c - Active_Stage_Time_Stamp__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: Active to Nurture</label>
    <type>Text</type>
</CustomField>