force-app/main/default/objects/Contact/fields/Conversion_Active_to_Nurture_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Active_to_Nurture_Hrs__c</fullName>
    <formula>(Nurture_Stage_Time_Stamp__c - Active_Stage_Time_Stamp__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: Active to Nurture (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>