force-app/main/default/objects/Contact/fields/Conversion_New_Lead_to_Active__c.field-meta.xml
<CustomField>
    <fullName>Conversion_New_Lead_to_Active__c</fullName>
    <formula>IF(ISBLANK(Active_Stage_Time_Stamp__c) = FALSE,
TEXT( 
FLOOR(Active_Stage_Time_Stamp__c - New_Lead_Stage_Time_Stamp__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((Active_Stage_Time_Stamp__c - New_Lead_Stage_Time_Stamp__c)*24,24)) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((Active_Stage_Time_Stamp__c - New_Lead_Stage_Time_Stamp__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: New Lead to Active</label>
    <type>Text</type>
</CustomField>