force-app/main/default/objects/Contact/fields/Conversion_New_Lead_to_Disq_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Conversion_New_Lead_to_Disq_Hrs__c</fullName>
    <formula>(Disqualified_Stage_Time_Stamp__c - New_Lead_Stage_Time_Stamp__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: New Lead to Disq. (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>