force-app/main/default/objects/Contact/fields/Conversion_New_Lead_to_Working_Min__c.field-meta.xml
<CustomField>
    <fullName>Conversion_New_Lead_to_Working_Min__c</fullName>
    <formula>(Working_Stage_Time_Stamp__c - New_Lead_Stage_Time_Stamp__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: New Lead to Working (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>