force-app/main/default/objects/Contact/fields/Conversion_Working_to_Active_Mins__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Working_to_Active_Mins__c</fullName>
    <formula>(Active_Stage_Time_Stamp__c - Working_Stage_Time_Stamp__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion: Working to Active (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>