force-app/main/default/objects/Contact/fields/Developers_Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Developers_Contract_Expiry__c</fullName>
    <label>Developers Contract Expiry</label>
    <type>Date</type>
</CustomField>