force-app/main/default/objects/Contact/fields/Developers_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Developers_Contract_Start_Date__c</fullName>
    <label>Developers Contract Start Date</label>
    <type>Date</type>
</CustomField>