force-app/main/default/objects/Contact/fields/Developers_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Developers_Contract_Status__c</fullName>
    <label>Developers Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>For Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>